# TPDF

./: .gitignore  TPDF.py  TPDF.spec  build.py  pyproject.toml  readme.md  release_build.py  release_publish.py
icon/: TPDF.icns  generate_icon.py
legacy/: TPDF.spec  img2pdf.py  imgpad.py  pdf2img.py  readme.txt
